--- a/templates/index.html
+++ b/templates/index.html
@@ -72,13 +72,13 @@
                 <label for="selected_script">Select Bypass Script:</label>
                 <select name="selected_script" id="selectedScript" class="form-control" required onchange="updateTextArea()">
                     <optgroup label="Your Android Script" data-directory="Script Directory 1">
-                        {% for script in bypass_scripts_1 %}
-                            <option value="{{ script }}">{{ script }}</option>
+                        {% for script in bypass_scripts_android %}
+                            <option value="{{ script['file_name'] }}">{{ script['file_name'] }} - {{ script['description'] }}</option>
                         {% endfor %}
                     </optgroup>
                     <optgroup label="Your iOS Script" data-directory="Script Directory 2">
-                        {% for script in bypass_scripts_2 %}
-                            <option value="{{ script }}">{{ script }}</option>
+                        {% for script in bypass_scripts_ios %}
+                            <option value="{{ script['file_name'] }}">{{ script['file_name'] }} - {{ script['description'] }}</option>
                         {% endfor %}
                     </optgroup>
                 </select>
