--- a/templates/index.html
+++ b/templates/index.html
@@ -91,9 +91,16 @@
                 </select>
             </div>
 
+            <input type="hidden" name="use_custom_script" id="useCustomScript" value="0">
+
             <div class="form-group">
                 <label for="script_content">Script Content:</label>
-                <textarea name="script_content" id="scriptContent" class="form-control" rows="10" cols="50" placeholder="Script Content" readonly></textarea>
+                <textarea name="script_content" id="scriptContent" class="form-control" rows="10" cols="50" placeholder="Script Content"></textarea>
+            </div>
+
+            <div class="form-group form-check">
+                <input type="checkbox" class="form-check-input" id="customScriptCheckbox" onchange="toggleCustomScript()">
+                <label class="form-check-label" for="customScriptCheckbox">Use Custom Script</label>
             </div>
 
             <button type="submit" class="btn btn-primary">Run Frida</button>
@@ -106,6 +113,18 @@
     </div>
 </body>
 <script>
+
+    function toggleCustomScript() {
+        var customScriptCheckbox = document.getElementById("customScriptCheckbox");
+        var useCustomScriptInput = document.getElementById("useCustomScript");
+
+        if (customScriptCheckbox.checked) {
+            useCustomScriptInput.value = "1";
+        } else {
+            useCustomScriptInput.value = "0";
+        }
+    }
+
     function filterOptions() {
         var input, filter, select, option, i, txtValue;
         input = document.getElementById("searchInput");
