--- a/templates/index.html
+++ b/templates/index.html
@@ -5,68 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Frida Script Runner</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.3/socket.io.js"></script>
-    <style>
-        body {
-            background-color: #f8f9fa;
-            color: #333;
-            padding: 20px;
-        }
-
-        .container {
-            background-color: #ffffff;
-            padding: 30px;
-            border-radius: 10px;
-            box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
-            margin-top: 20px;
-        }
-
-        .jumbotron {
-            background: #204ecf;
-            color: #fff;
-            padding: 20px;
-            border-radius: 10px;
-            margin-bottom: 30px;
-        }
-
-        .form-control {
-            border-radius: 5px;
-            margin-top: 10px;
-        }
-
-        .btn {
-            border-radius: 5px;
-            margin-top: 10px;
-        }
-
-        #outputContainer {
-            margin-top: 20px;
-            overflow-y: auto;
-            max-height: 300px;
-            border: 1px solid #ddd;
-            padding: 10px;
-            border-radius: 5px;
-        }
-
-        #outputFrida {
-            font-family: 'Courier New', monospace;
-            background-color: #2b2b2b;
-            margin: 0;
-            padding: 20px;
-            color:white;
-        }
-        ul {
-            list-style-type: none;
-            margin: 0;
-            padding: 0;
-        }
-        li {
-            line-height: 1.4;
-            white-space: pre-wrap;
-            overflow-wrap: break-word;
-        }
-    </style>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
+    <script src="{{ url_for('static', filename='js/socket.io.js') }}"></script>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/main.css') }}" class="rel">
 </head>
 
 <body>
@@ -78,29 +19,33 @@
         <form action="/run-frida" method="post">
             <div class="form-group">
                 <label for="package">Select Package:</label>
-                <input type="text" class="form-control" id="searchInput" oninput="filterOptions()" placeholder="Search for packages..">
+                <input type="text" class="form-control" id="searchInput" oninput="filterOptions()"
+                    placeholder="Search for packages..">
                 <select name="package" id="packageSelect" class="form-control mt-2" required>
                     {% if identifiers %}
-                        {% for identifier in identifiers %}
-                            <option value="{{ identifier }}">{{ identifier }}</option>
-                        {% endfor %}
+                    {% for identifier in identifiers %}
+                    <option value="{{ identifier }}">{{ identifier }}</option>
+                    {% endfor %}
                     {% else %}
-                        <option disabled>No packages detected. Connect your USB device and run Frida.</option>
+                    <option disabled>No packages detected. Connect your USB device and run Frida.</option>
                     {% endif %}
                 </select>
             </div>
 
             <div class="form-group">
                 <label for="selected_script">Select Bypass Script:</label>
-                <select name="selected_script" id="selectedScript" class="form-control" required onchange="updateTextArea()">
+                <select name="selected_script" id="selectedScript" class="form-control" required
+                    onchange="updateTextArea()">
                     <optgroup label="Your Android Script" data-directory="Script Directory 1">
                         {% for script in bypass_scripts_android %}
-                            <option value="{{ script['file_name'] }}">{{ script['description'] }} - {{ script['file_name'] }}</option>
+                        <option value="{{ script['file_name'] }}">{{ script['description'] }} - {{ script['file_name']
+                            }}</option>
                         {% endfor %}
                     </optgroup>
                     <optgroup label="Your iOS Script" data-directory="Script Directory 2">
                         {% for script in bypass_scripts_ios %}
-                            <option value="{{ script['file_name'] }}">{{ script['description'] }} - {{ script['file_name'] }} </option>
+                        <option value="{{ script['file_name'] }}">{{ script['description'] }} - {{ script['file_name']
+                            }} </option>
                         {% endfor %}
                     </optgroup>
                 </select>
@@ -110,11 +55,13 @@
 
             <div class="form-group">
                 <label for="script_content">Script Content:</label>
-                <textarea name="script_content" id="scriptContent" class="form-control" rows="10" cols="50" placeholder="Script Content"></textarea>
+                <textarea name="script_content" id="scriptContent" class="form-control" rows="10" cols="50"
+                    placeholder="Script Content"></textarea>
             </div>
 
             <div class="form-group form-check">
-                <input type="checkbox" class="form-check-input" id="customScriptCheckbox" onchange="toggleCustomScript()">
+                <input type="checkbox" class="form-check-input" id="customScriptCheckbox"
+                    onchange="toggleCustomScript()">
                 <label class="form-check-label" for="customScriptCheckbox">Use Custom Script</label>
             </div>
 
@@ -125,133 +72,9 @@
         <div id="outputFrida">
             <ul id="output-list"></ul>
         </div>
-    
+
     </div>
 </body>
-<script>
-        var socket = io.connect('http://' + document.domain + ':' + location.port);
 
-        var logOutput = document.getElementById('outputFrida');
-        var runButton = document.getElementById('runBtn');
-        var stopButton = document.getElementById('stopBtn');
-        runButton.disabled = false;
-        stopButton.disabled = true;
-
-        socket.on('output', function(data) {
-            var outputList = document.getElementById('output-list');
-            var listItem = document.createElement('li');
-            listItem.appendChild(document.createTextNode(data.data));
-            outputList.appendChild(listItem);
-        });
-
-    function toggleCustomScript() {
-        var customScriptCheckbox = document.getElementById("customScriptCheckbox");
-        var useCustomScriptInput = document.getElementById("useCustomScript");
-
-        if (customScriptCheckbox.checked) {
-            useCustomScriptInput.value = "1";
-        } else {
-            useCustomScriptInput.value = "0";
-        }
-    }
-
-    function filterOptions() {
-        var input, filter, select, option, i, txtValue;
-        input = document.getElementById("searchInput");
-        filter = input.value.toUpperCase();
-        select = document.getElementById("packageSelect");
-        options = select.getElementsByTagName("option");
-
-        for (i = 0; i < options.length; i++) {
-            txtValue = options[i].textContent || options[i].innerText;
-            if (txtValue.toUpperCase().indexOf(filter) > -1) {
-                options[i].style.display = "";
-            } else {
-                options[i].style.display = "none";
-            }
-        }
-    }
-
-    function updateTextArea() {
-        var select = document.getElementById("selectedScript");
-        var scriptContentTextArea = document.getElementById("scriptContent");
-        var selectedScript = select.options[select.selectedIndex].value;
-
-        fetch(`/get-script-content?script=${selectedScript}`)
-            .then(response => {
-                if (!response.ok) {
-                    throw new Error('Script content not found');
-                }
-                return response.text();
-            })
-            .then(data => scriptContentTextArea.value = data)
-            .catch(error => {
-                scriptContentTextArea.value = `Error loading script content: ${error.message}`;
-                console.error(error);
-            });
-    }
-
-    stopButton.addEventListener('click', function(event){
-        event.preventDefault();
-        stopButton.disabled = true;
-        runButton.disabled = false;
-        logOutput.innerHTML = '<ul id="output-list"></ul>';
-        fetch('/stop-frida')
-            .then(response => response.text())
-            .then(data => {
-                document.getElementById("outputContainer").innerHTML += '<div class="alert alert-info mt-4"><h2>Result:</h2><p>' + data + '</p></div>';
-            })
-            .catch(error => console.error(error));
-
-    });
-    // function stopFrida() {
-    //     preventDefault();
-    //     stopButton.disabled = true;
-    //     runButton.disabled = false;
-    //     logOutput.innerHTML = '<ul id="output-list"></ul>';
-    //     fetch('/stop-frida')
-    //         .then(response => response.text())
-    //         .then(data => {
-    //             document.getElementById("outputContainer").innerHTML += '<div class="alert alert-info mt-4"><h2>Result:</h2><p>' + data + '</p></div>';
-    //         })
-    //         .catch(error => console.error(error));
-    // }
-
-    runButton.addEventListener('click', function(event) {
-            event.preventDefault();
-            runButton.disabled = true;
-            stopButton.disabled = false;
-            runFrida();
-        });
-
-    function runFrida(){
-
-        const form = document.querySelector('form');
-        const outputContainer = document.getElementById("outputContainer");
-        logOutput.innerHTML = '<ul id="output-list"></ul>';
-
-        const formData = new FormData(form);
-        fetch('/run-frida', {
-            method: 'POST',
-            body: formData,
-        })
-        .then(response => response.json())
-        .then(data => {
-            
-            const content = data.result || data.error || 'Unknown error occurred';
-            appendContent(content);
-        })
-        .catch(error => {
-            console.error(error);
-            appendContent(`Error: ${error.message}`);
-        });
-
-    }
-    function appendContent(content) {
-        const outputContainer = document.getElementById("outputContainer");
-        outputContainer.innerHTML += '<div class="alert alert-info mt-4"><h2>Result:</h2><p>' + content + '</p></div>';
-        outputContainer.scrollTop = outputContainer.scrollHeight; 
-    }
-    runFrida();
-</script>
+<script src="{{ url_for('static', filename='js/main.js') }}"></script>
 </html>
