--- a/templates/no-usb.html
+++ b/templates/no-usb.html
@@ -17,10 +17,75 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/main.css') }}" class="rel">
     <style>
         body {
-            background-color: #f4f4f4;
-        }
+    margin: auto;
+    font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+    overflow: auto;
+    background: linear-gradient(315deg, #7311a9 11%, #204ecf 33%, #343fa8 77%);
+    animation: gradient 15s ease infinite;
+    background-size: 400% 400%;
+    background-attachment: fixed;
+}
+
+@keyframes gradient {
+    0% {
+        background-position: 0% 0%;
+    }
+    50% {
+        background-position: 100% 100%;
+    }
+    100% {
+        background-position: 0% 0%;
+    }
+}
+
+.wave {
+    background: rgb(255 255 255 / 25%);
+    border-radius: 1000% 1000% 0 0;
+    position: fixed;
+    width: 200%;
+    height: 25em;
+    animation: wave 10s -3s linear infinite;
+    transform: translate3d(0, 0, 0);
+    opacity: 0.8;
+    bottom: 0;
+    left: 0;
+    z-index: -1;
+}
+
+.wave:nth-of-type(2) {
+    bottom: -1.25em;
+    animation: wave 18s linear reverse infinite;
+    opacity: 0.8;
+}
+
+.wave:nth-of-type(3) {
+    bottom: -2.5em;
+    animation: wave 20s -1s reverse infinite;
+    opacity: 0.9;
+}
+
+@keyframes wave {
+    2% {
+        transform: translateX(1);
+    }
+
+    25% {
+        transform: translateX(-25%);
+    }
+
+    50% {
+        transform: translateX(-50%);
+    }
+
+    75% {
+        transform: translateX(-25%);
+    }
+
+    100% {
+        transform: translateX(1);
+    }
+}
     </style>
-    
 </head>
 
 <body>
@@ -37,17 +102,23 @@
             </div>
         </div>
         <br><br>
-        <div class="itemDescription">
-            <p>
-                Please make sure that USB is installed correctly, 
-                <br>
-                connect your device, run the Frida server, and then reload this page.
-                <br><br>
-                If you use emulator please run the Frida server, and then reload this page.
-            </p>
-        </div>
+        <p class="itemDescription">
+            Please make sure that USB is installed correctly, 
+            <br>
+            connect your device, run the Frida server, and then reload this page.
+            <br>
+            If you use emulator please run the Frida server, and then reload this page.
+        </p>
     </section>
+    <div class="wave">
+        <div class="wave"></div>
+    </div>
+    <div class="wave">
+        <div class="wave"></div>
+    </div>
+    <div class="wave">
+        <div class="wave"></div>
+    </div>
 </body>
-
 
 </html>
