--- a/static/css/main.css
+++ b/static/css/main.css
@@ -145,7 +145,7 @@ body {
   .itemTitle {
     font-size: 15px;
     font-weight: 600;
-    font-color: #1f1f1f;
+    color: #1f1f1f;
   }
 
   #reading-key {
