update and add new feature

--- a/templates/index.html
+++ b/templates/index.html
@@ -72,7 +72,9 @@
         <div id="outputFrida">
             <ul id="output-list"></ul>
         </div>
-
+        <footer class="py-3 my-4">
+            <p class="text-center text-muted">© <a href="https://github.com/z3n70/">2024 Secrash, z3n70</a></p>
+          </footer>
     </div>
 </body>
 
