--- a/templates/index.html
+++ b/templates/index.html
@@ -49,38 +49,47 @@
             </div>
           <div class="mb-3">
             <label for="exampleFormControlInput1" class="form-label">Select Package</label>
-            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Search for package . . .">
+            <input type="text" class="form-control" id="searchInput" oninput="filterOptions()" placeholder="Search for package . . .">
           </div>
-          <select class="form-select" aria-label="Default select example">
-            <option selected>Open this select menu</option>
-            <option value="1">One</option>
-            <option value="2">Two</option>
-            <option value="3">Three</option>
-          </select>
+          <select name="package" id="packageSelect" class="form-control mt-2" required>
+            {% if identifiers %}
+                {% for identifier in identifiers %}
+                    <option value="{{ identifier }}">{{ identifier }}</option>
+                {% endfor %}
+            {% else %}
+                <option disabled>No packages detected. Connect your USB device and run Frida.</option>
+            {% endif %}
+        </select>
           <div class="mt-3">
             <label for="exampleFormControlInput1" class="form-label">Select Bypass Script</label>
             <select class="form-select" aria-label="Default select example">
-              <option selected>Open this select menu</option>
-              <option value="1">One</option>
-              <option value="2">Two</option>
-              <option value="3">Three</option>
+              <optgroup label="Your Android Script" data-directory="Script Directory 1">
+                {% for script in bypass_scripts_android %}
+                    <option value="{{ script['file_name'] }}">{{ script['description'] }} - {{ script['file_name'] }}</option>
+                {% endfor %}
+              </optgroup>
+              <optgroup label="Your iOS Script" data-directory="Script Directory 2">
+                  {% for script in bypass_scripts_ios %}
+                      <option value="{{ script['file_name'] }}">{{ script['description'] }} - {{ script['file_name'] }}</option>
+                  {% endfor %}
+              </optgroup>
             </select>
           </div>
           <div class="mt-3">
-            <label for="exampleFormControlInput1" class="form-label">Script Content</label>
-            <textarea class="form-control" id="exampleFormControlTextarea1" rows="13"></textarea>
+            <label for="script_content" class="form-label">Script Content</label>
+            <textarea class="form-control" name="script_content" id="scriptContent" rows="9" placeholder="Script Content"></textarea>
           </div>
           <div class="d-flex justify-content-between">
             <div class="mt-3 form-check">
-              <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+              <input class="form-check-input" type="checkbox" value="" id="customScriptCheckbox" onchange="toggleCustomScript()">
               <label class="form-check-label" for="flexCheckDefault">
                 Use Custom Script
               </label>
             </div>
             <div class="mt-3">
-              <button type="button" class="btn btn-outline-primary">Run Frida</button>
+              <button type="button" class="btn btn-outline-primary" id="runBtn">Run Frida</button>
             <!-- <button type="button" class="btn " style="background: #d14d61; color: white;">Stop Frida</button> -->
-            <button type="button" class="btn btn-outline-danger">Stop Frida</button>
+            <button type="button" class="btn btn-outline-danger" id="stopBtn">Stop Frida</button>
           </div>
         </div>
       </div>
@@ -107,15 +116,7 @@
             <div class="cli">
               <div class="cli-content">
                 <span class="text-success">~</span> hengker@root# rm -rf /
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia illo laborum rem quae aut aliquam sit placeat nobis, reprehenderit vel repellat dolorem pariatur, ipsam eligendi exercitationem quasi corrupti temporibus totam.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia illo laborum rem quae aut aliquam sit placeat nobis, reprehenderit vel repellat dolorem pariatur, ipsam eligendi exercitationem quasi corrupti temporibus totam.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia illo laborum rem quae aut aliquam sit placeat nobis, reprehenderit vel repellat dolorem pariatur, ipsam eligendi exercitationem quasi corrupti temporibus totam.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia illo laborum rem quae aut aliquam sit placeat nobis, reprehenderit vel repellat dolorem pariatur, ipsam eligendi exercitationem quasi corrupti temporibus totam.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia illo laborum rem quae aut aliquam sit placeat nobis, reprehenderit vel repellat dolorem pariatur, ipsam eligendi exercitationem quasi corrupti temporibus totam.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia illo laborum rem quae aut aliquam sit placeat nobis, reprehenderit vel repellat dolorem pariatur, ipsam eligendi exercitationem quasi corrupti temporibus totam.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia illo laborum rem quae aut aliquam sit placeat nobis, reprehenderit vel repellat dolorem pariatur, ipsam eligendi exercitationem quasi corrupti temporibus totam.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia illo laborum rem quae aut aliquam sit placeat nobis, reprehenderit vel repellat dolorem pariatur, ipsam eligendi exercitationem quasi corrupti temporibus totam.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia illo laborum rem quae aut aliquam sit placeat nobis, reprehenderit vel repellat dolorem pariatur, ipsam eligendi exercitationem quasi corrupti temporibus totam.</p>
+                <p id="outputContainer"></p>
   
               </div>
             </div>
@@ -139,16 +140,8 @@
             <div class="cli">
               <div class="cli-content">
                 <span class="text-success">~</span> hengker@root# rm -rf /
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia illo laborum rem quae aut aliquam sit placeat nobis, reprehenderit vel repellat dolorem pariatur, ipsam eligendi exercitationem quasi corrupti temporibus totam.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia illo laborum rem quae aut aliquam sit placeat nobis, reprehenderit vel repellat dolorem pariatur, ipsam eligendi exercitationem quasi corrupti temporibus totam.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia illo laborum rem quae aut aliquam sit placeat nobis, reprehenderit vel repellat dolorem pariatur, ipsam eligendi exercitationem quasi corrupti temporibus totam.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia illo laborum rem quae aut aliquam sit placeat nobis, reprehenderit vel repellat dolorem pariatur, ipsam eligendi exercitationem quasi corrupti temporibus totam.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia illo laborum rem quae aut aliquam sit placeat nobis, reprehenderit vel repellat dolorem pariatur, ipsam eligendi exercitationem quasi corrupti temporibus totam.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia illo laborum rem quae aut aliquam sit placeat nobis, reprehenderit vel repellat dolorem pariatur, ipsam eligendi exercitationem quasi corrupti temporibus totam.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia illo laborum rem quae aut aliquam sit placeat nobis, reprehenderit vel repellat dolorem pariatur, ipsam eligendi exercitationem quasi corrupti temporibus totam.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia illo laborum rem quae aut aliquam sit placeat nobis, reprehenderit vel repellat dolorem pariatur, ipsam eligendi exercitationem quasi corrupti temporibus totam.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia illo laborum rem quae aut aliquam sit placeat nobis, reprehenderit vel repellat dolorem pariatur, ipsam eligendi exercitationem quasi corrupti temporibus totam.</p>
-  
+                <p id="outputFrida"></p>
+                <ul id="output-list"></ul>
               </div>
             </div>
           </div>
@@ -162,6 +155,9 @@
     <div class="wave"></div>
     <div class="wave"></div>
     <div class="wave"></div>
+    <script
+      src="../static/custom.js"
+    ></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
