--- a/templates/index.html
+++ b/templates/index.html
@@ -9,69 +9,69 @@
       rel="stylesheet"
       type="text/css"
       href="../static/main.css"
-    /> -->
+      /> -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-    crossorigin="anonymous"
-    />
-    
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+      />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.3/socket.io.js"></script>
     <link
       rel="stylesheet"
       type="text/css"
       href="../static/custom.css"
-    />
-
+      />
   </head>
   <body>
     <div class="container1">
       <div class=" justify-content-center logo">
-          <img src="../static/FSR-logo.png" class="size-logo mt-3" alt="logo">
-          <h2 class="text-center white">Frida Script Runner</h1>
+        <img src="../static/FSR-logo.png" class="size-logo mt-3" alt="logo">
+        <h2 class="text-center white">
+        Frida Script Runner</h1>
       </div>
-        <div class="row">
+      <div class="row">
         <div class="col bg">
-            <label for="exampleFormControlInput1" class="form-label">Your Devices</label>
-            <div class=" mb-3">
-              <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
-                <label class="form-check-label" for="inlineRadio1">Android</label>
-              </div>
-              <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
-                <label class="form-check-label" for="inlineRadio2">iOS</label>
-              </div>
+          <form action="/run-frida">
+          <label for="select-device-options" class="form-label">Your Devices</label>
+          <div class=" mb-3">
+            <div class="form-check form-check-inline">
+              <input name="select-device-options" class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="android">
+              <label class="form-check-label" for="inlineRadio1">Android</label>
             </div>
+            <div class="form-check form-check-inline">
+              <input name="select-device-options" class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="ios">
+              <label class="form-check-label" for="inlineRadio2">iOS</label>
+            </div>
+          </div>
           <div class="mb-3">
-            <label for="exampleFormControlInput1" class="form-label">Select Package</label>
-            <input type="text" class="form-control" id="searchInput" oninput="filterOptions()" placeholder="Search for package . . .">
+            <label for="search-packages" class="form-label">Select Package</label>
+            <input name="search-packages" type="text" class="form-control" id="searchInput" oninput="filterOptions()" placeholder="Search for package . . .">
           </div>
           <select name="package" id="packageSelect" class="form-control mt-2" required>
             {% if identifiers %}
-                {% for identifier in identifiers %}
-                    <option value="{{ identifier }}">{{ identifier }}</option>
-                {% endfor %}
+            {% for identifier in identifiers %}
+            <option value="{{ identifier }}">{{ identifier }}</option>
+            {% endfor %}
             {% else %}
-                <option disabled>No packages detected. Connect your USB device and run Frida.</option>
+            <option disabled>No packages detected. Connect your USB device and run Frida.</option>
             {% endif %}
-        </select>
+          </select>
           <div class="mt-3">
-            <label for="exampleFormControlInput1" class="form-label">Select Bypass Script</label>
-            <select class="form-select" aria-label="Default select example">
+            <label for="selected_script" class="form-label">Select Bypass Script</label>
+            <select name="selected_script" id="selectedScript" class="form-select" aria-label="Default select example">
               <optgroup label="Your Android Script" data-directory="Script Directory 1">
                 {% for script in bypass_scripts_android %}
-                    <option value="{{ script['file_name'] }}">{{ script['description'] }} - {{ script['file_name'] }}</option>
+                <option value="{{ script['file_name'] }}">{{ script['description'] }} - {{ script['file_name'] }}</option>
                 {% endfor %}
               </optgroup>
               <optgroup label="Your iOS Script" data-directory="Script Directory 2">
-                  {% for script in bypass_scripts_ios %}
-                      <option value="{{ script['file_name'] }}">{{ script['description'] }} - {{ script['file_name'] }}</option>
-                  {% endfor %}
+                {% for script in bypass_scripts_ios %}
+                <option value="{{ script['file_name'] }}">{{ script['description'] }} - {{ script['file_name'] }}</option>
+                {% endfor %}
               </optgroup>
             </select>
           </div>
@@ -81,23 +81,22 @@
           </div>
           <div class="d-flex justify-content-between">
             <div class="mt-3 form-check">
-              <input class="form-check-input" type="checkbox" value="" id="customScriptCheckbox" onchange="toggleCustomScript()">
-              <label class="form-check-label" for="flexCheckDefault">
-                Use Custom Script
+              <input class="form-check-input" type="checkbox" value="0" name="use_custom_script" id="customScriptCheckbox" onchange="toggleCustomScript()">
+              <label class="form-check-label" for="use_custom_script">
+              Use Custom Script
               </label>
             </div>
             <div class="mt-3">
               <button type="button" class="btn btn-outline-primary" id="runBtn">Run Frida</button>
-            <!-- <button type="button" class="btn " style="background: #d14d61; color: white;">Stop Frida</button> -->
-            <button type="button" class="btn btn-outline-danger" id="stopBtn">Stop Frida</button>
+              <!-- <button type="button" class="btn " style="background: #d14d61; color: white;">Stop Frida</button> -->
+              <button type="button" class="btn btn-outline-danger" id="stopBtn">Stop Frida</button>
+            </div>
           </div>
+        </form>
         </div>
-      </div>
         <div class="col">
           <div class="terminal-fsr">
             <div class="head-terminal">
-              
-            
               <div class="row  ">
                 <div class="col-5">
                   <div class="d-flex flex-row  ">
@@ -106,18 +105,15 @@
                     <div class="p-2 circle-green"></div>
                   </div>
                 </div>
-
                 <div class="col-7 title-fsr">
                   <span>FSR Logs</span>
                 </div>
               </div>
-              
             </div>
             <div class="cli">
-              <div class="cli-content">
-                <span class="text-success">~</span> hengker@root# rm -rf /
-                <p id="outputContainer"></p>
-  
+              <div class="cli-content" id="outputContainer">
+                <span class="text-success">~</span>
+                <!-- <p id="outputContainer"></p> -->
               </div>
             </div>
           </div>
@@ -131,7 +127,6 @@
                     <div class="p-2 circle-green"></div>
                   </div>
                 </div>
-
                 <div class="col-7 title-fsr">
                   <span>Frida Logs</span>
                 </div>
@@ -139,7 +134,7 @@
             </div>
             <div class="cli">
               <div class="cli-content">
-                <span class="text-success">~</span> hengker@root# rm -rf /
+                <span class="text-success">~</span>
                 <p id="outputFrida"></p>
                 <ul id="output-list"></ul>
               </div>
@@ -157,11 +152,11 @@
     <div class="wave"></div>
     <script
       src="../static/custom.js"
-    ></script>
+      ></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
-    ></script>
+      ></script>
   </body>
 </html>
