--- a/templates/index.html
+++ b/templates/index.html
@@ -112,7 +112,7 @@
             </div>
             <div class="cli">
               <div class="cli-content" id="outputContainer">
-                <span class="text-success">~</span>
+                <!-- <span class="text-success">~</span> -->
                 <!-- <p id="outputContainer"></p> -->
               </div>
             </div>
@@ -133,10 +133,9 @@
               </div>
             </div>
             <div class="cli">
-              <div class="cli-content">
-                <span class="text-success">~</span>
-                <p id="outputFrida"></p>
-                <ul id="output-list"></ul>
+              <div class="cli-content-terminal">
+                <p class="wraptext" id="outputFrida"></p>
+                <div id="output-list"></div>
               </div>
             </div>
           </div>
