--- a/templates/index.html
+++ b/templates/index.html
@@ -37,6 +37,7 @@
         <div class="col bg">
           <form action="/run-frida">
           <label for="select-device-options" class="form-label">Your Devices</label>
+          <p>{{ connected_device }}</p>
           <div class=" mb-3">
             <div class="form-check form-check-inline">
               <input name="select-device-options" class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="android">
