--- a/templates/no-usb.html
+++ b/templates/no-usb.html
@@ -10,10 +10,11 @@
     <title>Frida Script Runner | Lost's USB</title>
 
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}" class="rel">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <style>
         body {
     margin: auto;
-    font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+    font-family: Poppins;
     overflow: auto;
     background: linear-gradient(315deg, #7311a9 11%, #204ecf 33%, #343fa8 77%);
     animation: gradient 15s ease infinite;
