add fix clear history logs

--- a/templates/index.html
+++ b/templates/index.html
@@ -134,7 +134,7 @@
               </div>
             </div>
             <div class="cli">
-              <div class="cli-content-terminal">
+              <div class="cli-content-terminal" id="clearOutput">
                 <p class="wraptext" id="outputFrida"></p>
                 <div id="output-list"></div>
               </div>
