--- a/templates/index.html
+++ b/templates/index.html
@@ -10,39 +10,42 @@
       type="text/css"
       href="../static/main.css"
       /> -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/fontawesome.min.css" integrity="sha512-d0olNN35C6VLiulAobxYHZiXJmq+vl+BGIgAxQtD5+kqudro/xNMvv2yIHAciGHpExsIbKX3iLg+0B6d0k4+ZA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
-    />
+      />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.3/socket.io.js"></script>
-    <link rel="stylesheet" type="text/css" href="../static/custom.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="../static/custom.css"
+      />
   </head>
   <body>
     <div class="container1">
-      <div class="justify-content-center logo">
-        <img src="../static/FSR-logo.png" class="size-logo mt-3" alt="logo" />
-        <h2 class="text-center white">Frida Script Runner</h2>
+      <div class=" justify-content-center logo">
+        <img src="../static/FSR-logo.png" class="size-logo mt-3" alt="logo">
+        <h2 class="text-center white">
+        Frida Script Runner</h1>
       </div>
       <div class="row">
-        <div class="col-sm-12 col-lg-5 p-1">
-          <div class="bg">
-            <form action="/run-frida">
-              <label for="select-device-options" class="form-label"
-                >Your Devices</label
-              >
-              <p>
-                Device: {{ connected_device.model }}<br />UDID: {{
-                connected_device.UDID }}
-              </p>
-              <!-- <div class=" mb-3">
+        <div class="col bg">
+          <form action="/run-frida">
+            <label for="select-device-options" class="form-label">Your Devices</label>
+            {% if connected_device %}
+                {% for device in connected_device %}
+                    <p>Device: {{ device.model }}</br>UDID: {{ device.UDID }}</p>
+                {% endfor %}
+            {% else %}
+                <p>No device connected</p>
+            {% endif %}
+          <!-- <div class=" mb-3">
             <div class="form-check form-check-inline">
               <input name="select-device-options" class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="android">
               <label class="form-check-label" for="inlineRadio1">Android</label>
@@ -52,124 +55,60 @@
               <label class="form-check-label" for="inlineRadio2">iOS</label>
             </div>
           </div> -->
-              <div class="mb-3">
-                <label for="search-packages" class="form-label"
-                  >Select Package</label
-                >
-                <input
-                  name="search-packages"
-                  type="text"
-                  class="form-control"
-                  id="searchInput"
-                  oninput="filterOptions()"
-                  placeholder="Search for package . . ."
-                />
-              </div>
-              <select
-                name="package"
-                id="packageSelect"
-                class="form-control mt-2"
-                required
-              >
-                {% if identifiers %} {% for identifier in identifiers %}
-                <option value="{{ identifier.split()[2] }}">
-                  {{ identifier }}
-                </option>
-                {% endfor %} {% else %}
-                <option disabled>
-                  No packages detected. Connect your USB device and run Frida.
-                </option>
-                {% endif %}
-              </select>
-              <div class="mt-3">
-                <label for="selected_script" class="form-label"
-                  >Select Bypass Script</label
-                >
-                <select
-                  name="selected_script"
-                  id="selectedScript"
-                  class="form-select"
-                  aria-label="Default select example"
-                >
-                  <optgroup
-                    label="Your Android Script"
-                    data-directory="Script Directory 1"
-                  >
-                    {% for script in bypass_scripts_android %}
-                    <option value="{{ script['file_name'] }}">
-                      {{ script['description'] }} - {{ script['file_name'] }}
-                    </option>
-                    {% endfor %}
-                  </optgroup>
-                  <optgroup
-                    label="Your iOS Script"
-                    data-directory="Script Directory 2"
-                  >
-                    {% for script in bypass_scripts_ios %}
-                    <option value="{{ script['file_name'] }}">
-                      {{ script['description'] }} - {{ script['file_name'] }}
-                    </option>
-                    {% endfor %}
-                  </optgroup>
-                </select>
-              </div>
-              <div class="mt-3">
-                <label for="script_content" class="form-label"
-                  >Script Content</label
-                >
-                <textarea
-                  class="form-control"
-                  name="script_content"
-                  id="scriptContent"
-                  rows="6"
-                  placeholder="Script Content"
-                ></textarea>
-              </div>
-              <div class="row d-flex justify-content-between">
-                <div class="col-xl-12 col-xxl-6 mt-3">
-                  <input
-                    class="form-check-input"
-                    type="checkbox"
-                    value="0"
-                    name="use_custom_script"
-                    id="customScriptCheckbox"
-                    onchange="toggleCustomScript()"
-                  />
-                  <label class="form-check-label" for="use_custom_script">
-                    Use Custom Script
-                  </label>
-                </div>
-                <div
-                  class="col-xl-12 col-xxl-6 mt-2 d-flex justify-content-center"
-                >
-                  <div>
-                    <button
-                      type="button"
-                      class="btn btn-outline-primary"
-                      id="runBtn"
-                    >
-                      Run Frida
-                    </button>
-                    <!-- <button type="button" class="btn " style="background: #d14d61; color: white;">Stop Frida</button> -->
-                    <button
-                      type="button"
-                      class="btn btn-outline-danger"
-                      id="stopBtn"
-                    >
-                      Stop Frida
-                    </button>
-                  </div>
-                </div>
-              </div>
-            </form>
+          <div class="mb-3">
+            <label for="search-packages" class="form-label">Select Package</label>
+            <input name="search-packages" type="text" class="form-control" id="searchInput" oninput="filterOptions()" placeholder="Search for package . . .">
           </div>
+          <select name="package" id="packageSelect" class="form-control" required>
+            {% if identifiers %}
+            {% for identifier in identifiers %}
+            <option value="{{ identifier.split()[2] }}">{{ identifier }}</option>
+            {% endfor %}
+            {% else %}
+            <option disabled>No packages detected. Connect your USB device and run Frida.</option>
+            {% endif %}
+          </select>
+          <div class="mt-3" id="chooseScript">
+            <label for="selected_script" class="form-label">Select Bypass Script</label>
+            <select name="selected_script[]" id="selectedScript" class="form-select mb-2" aria-label="Default select example">
+              <optgroup label="Your Android Script" data-directory="Script Directory 1">
+                {% for script in bypass_scripts_android %}
+                <option value="{{ script['file_name'] }}">{{ script['description'] }} - {{ script['file_name'] }}</option>
+                {% endfor %}
+              </optgroup>
+              <optgroup label="Your iOS Script" data-directory="Script Directory 2">
+                {% for script in bypass_scripts_ios %}
+                <option value="{{ script['file_name'] }}">{{ script['description'] }} - {{ script['file_name'] }}</option>
+                {% endfor %}
+              </optgroup>
+            </select>
+          </div>
+          <button type="button" class="btn btn-warning mt-2" onclick="multipleScript()"><b><span class="fa fa-plus"></span></b> Other Script</button>
+          <div class="mt-3">
+            <label for="script_content" class="form-label">Script Content</label>
+            <textarea class="form-control" name="script_content" id="scriptContent" rows="9" placeholder="Script Content"></textarea>
+          </div>
+          <div class="d-flex justify-content-between">
+            <div class="mt-3 form-check">
+              <input class="form-check-input" type="checkbox" value="0" name="use_custom_script" id="customScriptCheckbox" onchange="toggleCustomScript()">
+              <label class="form-check-label" for="use_custom_script">
+              Use Custom Script
+              </label>
+            </div>
+            <div class="mt-3">
+              <button type="button" class="btn btn-outline-primary" id="runBtn">Run Frida</button>
+              <!-- <button type="button" class="btn " style="background: #d14d61; color: white;">Stop Frida</button> -->
+              <button type="button" class="btn btn-outline-danger" id="stopBtn">Stop Frida</button>
+            </div>
+          </div>
+        </form>
         </div>
-        <div class="col-sm-12 col-lg-7 p-1">
+        <div class="col">
           <div class="terminal-fsr">
             <div class="head-terminal">
-              <div class="row">
+              <div class="row  ">
                 <div class="col-5">
-                  <div class="d-flex flex-row">
+                  <div class="d-flex flex-row  ">
                     <div class="p-2 circle-red"></div>
                     <div class="p-2 circle-yellow"></div>
                     <div class="p-2 circle-green"></div>
@@ -187,11 +126,11 @@
               </div>
             </div>
           </div>
-          <div class="terminal-frida mt-2">
+          <div class="terminal-fsr mt-2">
             <div class="head-terminal">
-              <div class="row">
+              <div class="row  ">
                 <div class="col-5">
-                  <div class="d-flex flex-row">
+                  <div class="d-flex flex-row  ">
                     <div class="p-2 circle-red"></div>
                     <div class="p-2 circle-yellow"></div>
                     <div class="p-2 circle-green"></div>
@@ -203,7 +142,7 @@
               </div>
             </div>
             <div class="cli">
-              <div class="cli-content-frida" id="clearOutput">
+              <div class="cli-content-terminal" id="clearOutput">
                 <p class="wraptext" id="outputFrida"></p>
                 <div id="output-list"></div>
               </div>
@@ -213,19 +152,19 @@
         </div>
       </div>
       <div class="footer">
-        <a class="credit" href="https://secrash.com" target="_blank"
-          ><span>2024 © Secrash</span></a
-        >
+        <a class="credit" href="https://secrash.com" target="_blank"><span>2024 © Secrash</span></a>
       </div>
     </div>
     <div class="wave"></div>
     <div class="wave"></div>
     <div class="wave"></div>
-    <script src="../static/custom.js"></script>
+    <script
+      src="../static/custom.js"
+      ></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
-    ></script>
+      ></script>      
   </body>
 </html>
